[project]
name = "resume-optimizer-agent"
version = "0.1.0"
description = "A Docker-ready resume optimizer agent built with FastAPI and DeepSeek."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pypdf>=4.3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
